fix z-index

--- a/src/components/blur/blur.css
+++ b/src/components/blur/blur.css
@@ -6,7 +6,7 @@
     top: 60px;
     left: 0;
     background: linear-gradient(#2d314d,transparent);
-    z-index: -1;
+    z-index: 5;
 }
 
 @media screen and (max-width:768px) {
